--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
